<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skym_bot_sensors</name>
  <version>0.0.0</version>
  <description>pkg to launch processes related to gas analysis</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>image_tools</depend>
  <depend>bme688_driver</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
